grammar.txt
STATEMENT -> 'var' ID ':' TYPEID [ '=' EXPRESSION ]
STATEMENT -> 'if' EXPRESSION 'then' STATEMENTS ELSEIFS ELSES 'endif'
STATEMENT -> 'for' ID 'in' EXPRESSION '..' EXPRESSION [ '..' EXPRESSION ] do STATEMENTS 'endfor'
STATEMENT -> 'while' EXPRESSION 'do' STATEMENTS 'endwhile'
STATEMENT -> 'defer' STATEMENTS 'enddefer'
STATEMENT -> 'return' [ EXPRESSION ]

STATEMENT -> EXPRESSION '=' EXPRESSION // Assingment
STATEMENT -> EXPRESSION

STATEMENTS -> STATEMENT NL STATEMENTS
STATEMENTS ->

ELSEIFS -> 'elseif' EXPRESSION 'then' STATEMENTS ELSEIFS
ELSEIFS ->

ELSES -> 'else' STATEMENTS
ELSES ->



EXPRESSION -> EXPRESSION '.' ID
EXPRESSION -> EXPRESSION '[' EXPRESSION ']'
EXPRESSION -> EXPRESSION BIN_OP EXPRESSION

EXPRESSION -> '~' EXPRESSION
EXPRESSION -> CONSTANT
EXPRESSION -> DOTSTRING '(' FUNC_ARGS ')'
EXPRESSION -> DOTSTRING '{' FIELD_INITS '}'
EXPRESSION -> ID


EXPRESSION -> EXPRESSION1 EXPRESSION*
EXPRESSION* -> '.' ID EXPRESSION*
EXPRESSION* -> '[' EXPRESSION ']' EXPRESSION*
EXPRESSION* ->

EXPRESSION1 -> EXPRESSION2 EXPRESSION1*
EXPRESSION1* -> BIN_OP EXPRESSION2 EXPRESSION1*
EXPRESSION1* ->

EXPRESSION2 -> '~' EXPRESSION
EXPRESSION2 -> CONSTANT
EXPRESSION2 -> DOTSTRING '(' FUNC_ARGS ')'
EXPRESSION2 -> DOTSTRING '{' FIELD_INITS '}'
EXPRESSION2 -> ID
EXPRESSION2 -> '-' CONSTANT
